--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Collectible Staking</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>1Dan Nightmares Game</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
