GitHub action script updates

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1Dan Nightmares Game</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="/1DanGame/favicon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/1DanGame/favicon.png?v=1.1.0">
 </head>
 <body>
   <div id="app"></div>
