--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv='cache-control' content='no-cache'> 
+  <meta http-equiv='expires' content='0'> 
+  <meta http-equiv='pragma' content='no-cache'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>1Dan Nightmares Game</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="/1DanGame/favicon.png?v=1.1.0">
+  <link rel="icon" type="image/png" sizes="32x32" href="/1DanGame/favicon.png?v=1.2.0">
 </head>
 <body>
   <div id="app"></div>
